# VirtualSoc

./: CMakeLists.txt  ClientApp  ServerApp
Client/: ChatWindow.cpp  ChatWindow.h  main.cpp
Server/: Client.h  CommandHandler.h  Server.cpp  Server.h  main.cpp
Server/Database/: Database.h
